--- a/Downloads/next-test_local/.gitignore
+++ b/Downloads/next-test_local/.gitignore
@@ -34,3 +34,15 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# .gitignore ファイルの例
+Application Data/
+Cookies/
+Local Settings/
+My Documents/
+NetHood/
+PrintHood/
+Recent/
+SendTo/
+Templates/
+スタート メニュー/
